--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing='30'>
       <tr>
-        <td><img src="C:/dataloder/65127389148712450.jpg" alt="画像" height="200" width="150"></td>
+        <td><img src="images/xiaoqing.jpg" alt="画像" height="200" width="150"></td>
         <td>
           <h1>WANG XIAOQING</h1>
           <p>山東省</p>
